Add batch execution support
Add support for executing an Artifex batch by adding a dedicated page
allowing the user to:

- select the batch file.
- execute it.
- copy the batch execution output to the clipboard.

--- a/data/resources/ui/shortcuts.ui
+++ b/data/resources/ui/shortcuts.ui
@@ -44,6 +44,29 @@
             </child>
           </object>
         </child>
+        <child>
+          <object class="GtkShortcutsGroup">
+            <property name="title" translatable="yes" context="shortcut window">Batch Execution</property>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="title" translatable="yes" context="shortcut window">Open batch</property>
+                <property name="accelerator">&lt;Control&gt;o</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="title" translatable="yes" context="shortcut window">Execute batch</property>
+                <property name="accelerator">&lt;Control&gt;x</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="title" translatable="yes" context="shortcut window">Copy output</property>
+                <property name="accelerator">&lt;Control&gt;c</property>
+              </object>
+            </child>
+          </object>
+        </child>
       </object>
     </child>
   </object>
